# pi-mono

./: .gitignore
docs/: migration.md  migration_state.json
python/: pyproject.toml
python/src/pi_mono/: config.py
python/src/pi_mono/utils/: ansi.py
python/tests/: test_paths.py
scripts/: check-python.sh
